# NetworksLabs_SUT

./: .gitignore  CMakeLists.txt
Lab1/TCPClient/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portdialog.cpp  portdialog.h  portdialog.ui
Lab1/TCPServer/: CMakeLists.txt  func.cpp  func.h  server.cpp  server.h
Lab1/UDPClient/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portdialog.cpp  portdialog.ui
Lab1/UDPServer/: CMakeLists.txt  func.h  main.cpp  server.cpp  server.h
Lab2/TCPClientFiles/: CMakeLists.txt  downloaddialog.h  downloaddialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  portdialog.cpp  portdialog.ui
Lab2/TCPServerFiles/: CMakeLists.txt  server.cpp  server.h
Lab2/UDPClientFiles/: CMakeLists.txt  downloaddialog.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portdialog.cpp  portdialog.ui
Lab2/UDPServerFiles/: CMakeLists.txt  func.cpp  server.cpp  server.h
Lab3/Base64/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lab4/SMTPSender/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portdialog.cpp  portdialog.h  portdialog.ui  resource.qrc
Lab5/POP3Receiver/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  portdialog.cpp  portdialog.ui  resource.qrc
cmake/: config.cmake  config.cmake.example  functions.cmake
kurs/Mailer/: CMakeLists.txt  mailer.cpp  mailer.h  mailer.ui  mailsender.cpp  mailsender.h  mailsender.ui  main.cpp  portdialog.cpp  portdialog.h  portdialog.ui  resource.qrc
