cmake_minimum_required(VERSION 3.7)

set(PROJECT_NAME Lab4SMTPSender)

project(${PROJECT_NAME} LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt5 COMPONENTS Core Widgets Network WebEngineWidgets REQUIRED)

include(../../cmake/functions.cmake)
include(../../cmake/config.cmake)

set(CLASSES_WITH_UI mainwindow portdialog)
set(CLASSES_WITHOUT_UI )
set(CPP_ONLY main)
set(HEADER_ONLY )

set(EXTENTIONS_WITH_UI h cpp ui)
set(EXTENTIONS_WITHOUT_UI h cpp)
set(EXTENTIONS_CPP_ONLY cpp)
set(EXTENTIONS_HEADER_ONLY h)

ADD_EXTENTION(FILES "${CLASSES_WITH_UI}" "${EXTENTIONS_WITH_UI}")
ADD_EXTENTION(FILES "${CLASSES_WITHOUT_UI}" "${EXTENTIONS_WITHOUT_UI}")
ADD_EXTENTION(FILES "${CPP_ONLY}" "${EXTENTIONS_CPP_ONLY}")
ADD_EXTENTION(FILES "${HEADER_ONLY}" "${EXTENTIONS_HEADER_ONLY}")

INIT_GUI_EXECUTABLE(${PROJECT_NAME} "${FILES}")

set(QT5_PLUGINS Qt5::Widgets Qt5::Core Qt5::Network Qt5::WebEngineWidgets)

SET_LIBS(${PROJECT_NAME} ${PROJECT_DIR}/bin "${QT5_PLUGINS}")
